# ImageResizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ImageResizer/: CMakeLists.txt  ImageResizer.cpp  ImageResizer.h  ProgramOptions.hxx  TestOpenCL.cpp
ImageResizer/dependencies/: CMakeLists.txt
